legal responsible field and styles/errors email

--- a/styles/global.css
+++ b/styles/global.css
@@ -13,6 +13,7 @@
   --text-secondary: #57534E;
   --text-tertiary: #8F8881;
   --text-hightlight: #E43A12;
+  --text-error: #78716C;
 
   --text-surface-primary: #FFFFFF;
   --surface-secondary: #FEE7D6;
