--- a/styles/global.css
+++ b/styles/global.css
@@ -12,7 +12,7 @@
   --text-primary: #292524;
   --text-secondary: #57534E;
   --text-tertiary: #8F8881;
-  --text-hightlight: #E43A12;
+  --text-highlight: #E43A12;
   --text-error: #78716C;
 
   --text-surface-primary: #FFFFFF;
@@ -20,7 +20,7 @@
   --surface-disabled: #E7E5E4;
 
   --stroke-default: #D6D3D1;
-  --stroke-hightlight: #F3541C;
+  --stroke-highlight: #F3541C;
   --semantic-error: #DC2626;
 }
 
